<resources>
    <string name="app_name">iGolf</string>

    <!-- activity_auth -->
    <string name="hint_username">Nom d\'utilisateur</string>
    <string name="error_empty_field">Veuillez compléter ce champ.</string>
    <string name="login">Se connecter</string>
    <string name="tabItem_list">Liste</string>
    <string name="tabItem_graph">Graphique</string>
    <string name="tabItem_score">Mon score</string>
    <string name="tabItem_results">Résultats</string>
    <string name="password">Mot de passe</string>
    <string name="minigolf_name">Nom du minigolf</string>
    <string name="minigolf_course_name">Nom de la course</string>
    <string name="create_game">Créer une partie</string>
    <string name="hint_token_game">Code de la partie</string>
    <string name="join_game">Rejoindre la partie</string>
    <string name="choose_course">Choisissez une courses</string>
    <string name="connection">Connexion</string>
    <string name="start_game">Commencer</string>
    <string name="stay_connected">Rester connecter</string>
    <string name="startGame">Commencer une nouvelle partie</string>
    <string name="error_token">Le code que vous avez entez n\'existe pas</string>
    <string name="or">ou</string>
    <string name="select_minigolf">Sélectionnez un minigolf :</string>
    <string name="select_course">Sélectionnez une course :</string>
    <string name="token_game">Code de la partie :</string>
    <string name="terminate">Fin de la partie</string>
    <string name="error_login">Nom d\'utilisateur ou mot de passe incorrect</string>
    <plurals name="nb_of_points">
        <item quantity="one">%1d Point</item>
        <item quantity="other">%1d Points</item>
    </plurals>
    <plurals name="nb_of_holes">
        <item quantity="one">%1d Trou</item>
        <item quantity="other">%1d Trous</item>
    </plurals>
    <plurals name="tv_next_turn">
        <item quantity="one">C\'est à vous après %1d personne</item>
        <item quantity="other">C\'est à vous après %1d personnes</item>
    </plurals>
    <string name="hole_number">Trou N°%1$s</string>
    <string name="link_create"><a href="https://swiped.srvz-webapp.he-arc.ch">Pas encore de compte ?</a></string>
    <string name="about">À propos</string>

</resources>
