<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/main_padding">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_errorToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/error_token"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_id_party"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_token_game"
        app:errorEnabled="true"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_id_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="@integer/max_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_joinGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:padding="@dimen/paddingBigButton"
        android:text="@string/join_game" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textAllCaps="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_createGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingBigButton"
        android:text="@string/create_game" />
</LinearLayout>




